Prerit_Munjal/Day-5/label-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: label-demo
  labels:
    environmet: staging
    release: alpha1.1
    tier: kubecloud
spec:
  containers:
    - name: nginx
      image: nginx:1.14.2
      ports:
        - containerPort: 80
