Prerit_Munjal/Day-5/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-kubecloud
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: dev.kubecloud.tech
      http:
        paths:
          - path: /play
            pathType: Prefix
            backend:
              service:
                name: test
                port:
                  number: 8080
